syntax = "proto3";

option go_package = "gen/proto";

package helloworld;

service InstaPost {
  rpc GetPosts (InstaPostRequest) returns (InstaPostResponse) {}
}

message InstaPostRequest {
  string id = 1;
}

// The response message containing the greetings
message InstaPostResponse {
  string stats = 1;
}